--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -30,6 +30,14 @@ body {
   display: none;
 }
 
+.dark-only {
+  display: none;
+}
+
+.light-only {
+  display: block;
+}
+
 a:focus {
   outline: 0;
   box-shadow: 0 0 0 4px rgba($primary, 0.5);
